parslers-benchmark/src/tests/invalid/semanticErr/exit/badCharExit.wacc
# tries to exit using a character

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  exit 'a'
end
